# barter

./: README.md
oanda_client/: Cargo.toml  README.md
oanda_client/.openapi-generator/: FILES
oanda_client/docs/: AcceptDatetimeFormat.md  Account.md  AccountChangesState.md  AccountFinancingMode.md  AccountSummary.md  CalculatedAccountState.md  CalculatedPositionState.md  CalculatedTradeState.md  CancelOrder200Response.md  CancelOrder404Response.md  CancellableOrderType.md  Candlestick.md  ClientConfigureRejectTransaction.md  ClientConfigureTransaction.md  ClientPrice.md  ClosePosition200Response.md  ClosePosition400Response.md  ClosePosition404Response.md  ClosePositionRequest.md  CloseTrade200Response.md  CloseTrade400Response.md  CloseTrade404Response.md  CloseTradeRequest.md  CloseTransaction.md  ConfigureAccount200Response.md  ConfigureAccount400Response.md  ConfigureAccountRequest.md  CreateOrder201Response.md  CreateOrder400Response.md  CreateOrder404Response.md  CreateTransaction.md  DailyFinancingTransaction.md  DefaultApi.md  DelayedTradeClosureTransaction.md  Direction.md  DynamicOrderState.md  FixedPriceOrder.md  FixedPriceOrderReason.md  FixedPriceOrderTransaction.md  FundingReason.md  (+140 more)
oanda_client/spec/: v20.patch  v20.yaml
oanda_client/src/apis/: configuration.rs  default_api.rs
oanda_client/src/models/: _instruments__instrument__order_book_get_200_response.rs  _instruments__instrument__position_book_get_200_response.rs  accept_datetime_format.rs  account.rs  account_changes.rs  account_changes_state.rs  account_financing_mode.rs  account_summary.rs  (+188 more)
(+4 files in other folders)
